--- a/packages/fast-element/test/index.html
+++ b/packages/fast-element/test/index.html
@@ -5,5 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FAST Element tests</title>
     </head>
-    <body></body>
+    <body>
+        <script type="module" src="main.ts"></script>
+    </body>
 </html>
