test: add host bindings hydration tests

--- a/packages/fast-html/test/index.html
+++ b/packages/fast-html/test/index.html
@@ -14,6 +14,7 @@
             <li><a href="/fixtures/deep-merge/">deep-merge</a></li>
             <li><a href="/fixtures/dot-syntax/">dot-syntax</a></li>
             <li><a href="/fixtures/event/">event</a></li>
+            <li><a href="/fixtures/host-bindings/">host-bindings</a></li>
             <li><a href="/fixtures/lifecycle-callbacks/">lifecycle-callbacks</a></li>
             <li><a href="/fixtures/nested-elements/">nested-elements</a></li>
             <li><a href="/fixtures/observer-map/">observer-map</a></li>
