--- a/packages/fast-html/test/index.html
+++ b/packages/fast-html/test/index.html
@@ -18,6 +18,7 @@
             <li><a href="/fixtures/lifecycle-callbacks/">lifecycle-callbacks</a></li>
             <li><a href="/fixtures/nested-elements/">nested-elements</a></li>
             <li><a href="/fixtures/observer-map/">observer-map</a></li>
+            <li><a href="/fixtures/performance-metrics/">performance-metrics</a></li>
             <li><a href="/fixtures/ref/">ref</a></li>
             <li><a href="/fixtures/repeat/">repeat</a></li>
             <li><a href="/fixtures/slotted/">slotted</a></li>
