--- a/packages/bench/src/repeat-mutate/fhtml/index.html
+++ b/packages/bench/src/repeat-mutate/fhtml/index.html
@@ -11,7 +11,7 @@
         <template>
             <ul>
                 <f-repeat value="{{item in items}}">
-                    <li>{{item}}</li>
+                    <li>{{item.text}}</li>
                 </f-repeat>
             </ul>
         </template>
