--- a/packages/bench/src/repeat-mutate/fhtml-hydrate/index.html
+++ b/packages/bench/src/repeat-mutate/fhtml-hydrate/index.html
@@ -14,7 +14,7 @@
         <!-- @/bench-ssr -->
     </div>
     <f-template name="bench-repeat-mutate">
-        <template><ul><f-repeat value="{{item in items}}"><li>{{item}}</li></f-repeat></ul></template>
+        <template><ul><f-repeat value="{{item in items}}"><li>{{item.text}}</li></f-repeat></ul></template>
     </f-template>
     <script type="module" src="./main.ts"></script>
 </body>
